# ftry

./: AGENTS.md  README.md  pyproject.toml
.github/skills/python-test/: SKILL.md
.github/skills/python-windows-agent-cli/: SKILL.md
src/ftry/: __init__.py  cli.py  line.txt
